--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                   <a class="header__link-logo" href="#">
                      <img
                         class="header__logo"
-                        src="./dist/img/LOGO.png"
+                        src="/img/LOGO.png"
                         alt="logo"
                         width="184"
                         height="21"
