--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
       <li class="netmonet__item netmonet__item__footer"> <a class="header__link-logo" href="#">
          <img
             class="header__logo"
-            src="./dist/img/logo.png"
+            src="/img/LOGO.png"
             alt="logo"
             width="184"
             height="21"
@@ -401,10 +401,10 @@
    </ul>
 </div>
 <div class="footer__logo__container">
-   <img class="best2pay" src="/src/images/best2pay.png" alt="">
-   <img class="footer__logo mir" src="/src/images/mir.png" alt="">
-   <img class="footer__logo visa" src="/src/images/visa.png" alt="">
-   <img class="footer__logo mastercard" src="/src/images/mastercard.png" alt="">
+   <img class="best2pay" src="img/best2pay.png" alt="">
+   <img class="footer__logo mir" src="img/mir.png" alt="">
+   <img class="footer__logo visa" src="img/visa.png">
+   <img class="footer__logo mastercard" src="img/mastercard.png" alt="">
 </div>
 <h2 class="footer__last__header">
    © 2021 - нетмонет.ру. Все права защищены.
