--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                   <a class="header__link-logo" href="#">
                      <img
                         class="header__logo"
-                        src="/img/LOGO.png"
+                        src="img/LOGO.png"
                         alt="logo"
                         width="184"
                         height="21"
@@ -355,7 +355,7 @@
       <li class="netmonet__item netmonet__item__footer"> <a class="header__link-logo" href="#">
          <img
             class="header__logo"
-            src="/img/LOGO.png"
+            src="img/LOGO.png"
             alt="logo"
             width="184"
             height="21"
